[gd_scene load_steps=5 format=2]

[ext_resource path="res://components/motion/motion.gd" type="Script" id=1]
[ext_resource path="res://player/jump2.wav" type="AudioStream" id=2]
[ext_resource path="res://player/MC_running.wav" type="AudioStream" id=3]
[ext_resource path="res://player/land.mp3" type="AudioStream" id=4]

[node name="Motion" type="Node2D"]
script = ExtResource( 1 )

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="LandSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
